syntax = "proto3";

package nice_grpc.test;

service Test {
  rpc TestUnary(TestRequest) returns(TestResponse){};
  rpc TestServerStream(TestRequest) returns(stream TestResponse){};
  rpc TestClientStream(stream TestRequest) returns(TestResponse){};
  rpc TestBidiStream(stream TestRequest) returns(stream TestResponse){};
}

message TestRequest {}
message TestResponse {}
